2009-12-26  Per Bothner  <per@bothner.com>

	* binarytrees.scm (test): Fix max-depth test.

2009-12-25  root  <per@bothner.com>

	* misc-test.scm (f6 renamed to f60, etc): Rename to avoid duplicate
	declaration when compiled as a unit.
	* mac-test.scm: Likewise.
	Use begin-for-syntax.
	* obj-test.scm (internal-node-name list): Use define-variable, rather
	than define, so the definition is visible to module2.scm.

2009-12-06  Per Bothner  <per@bothner.com>
	    Andrea Girotto <andrea.girotto@gmail.com>

	* srfi-16-test.scm: New testcase from Savannah bug #28022:
	"case-lambda (srfi 16) not working with strings".  Converted to
	use SRFI-64 style, and also fixed a few test errors.
	* Makefile.am: Update accordingly.

2009-12-05  Ken Dickey
	    Per Bothner  <per@bothner.com>

	* formatst.scm: A bunch of new tests based on SRFI-48.

2009-12-04  Helmut Eller  <eller.helmut@gmail.com>
	    Per Bothner  <per@bothner.com>

	* mac-test.scm: New test-case for Savannah bug #27042:
	"Bad interaction between syntax-rules and call-with-values".

2009-12-02  Per Bothner  <per@bothner.com>
	    Jamison Hope <jrh@theptrgroup.com>

	* classes1.scm (import-class): New test of syntax-case in compiled
	class.  Based on bug reported by Jamison Hope <jrh@theptrgroup.com>.

2009-12-01  Per Bothner  <per@bothner.com>

	* binarytrees.scm: Use define-class rather than define-simple-class.
	We now optimize the former as if it were the latter, except that
	we get a nested class, which is cleaner.
	* pidigits.scm: Likewise.
	* threadring.scm: Likewise.
	* nbody.scm: Likewise.
	* Makefile.am: Update accordingly, as various classes now are nested.
	* inlining.expected: Likewise.

2009-11-02  Per Bothner  <per@bothner.com>

	* threadring.scm: New benchmark, for shootout.alioth.debian.org.
	Based on Java 6 -server #4 version contributed by Fabien Le Floc'h
	* threadring-output.txt: Expected output.
	* Makefile.am: Update accordingly.

2009-11-01  Per Bothner  <per@bothner.com>
